--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
 
+
+<html>
+<head>
+<title>testpage</title>
+</head>
+<body ALINK="#FF0000" LINK="#0000FF" VLINK="#FF33FF" bgcolor="#FFFFCC">
+<table id="myTable" border="1" bgcolor="#CCFFCC" cellpadding="2" cellspacing="5">
+<tr>
+<td >Australia</td>
+<td><input type="text" value="" /></td>
+<td><input type="text" value="" /></td></td>
+<td><a HREF="" target="new">Summary of Accounts</a></td>
+<td><a HREF="" target="new">Estatement</a></td>
+<td><input type="submit" value="edit"></td>
+<td><input type="submit" value="save"></td>
+</tr>
+<tr>
+<td >Australia</td>
+<td><input type="text" value="" /></td>
+<td><input type="text" value="" /></td>
+<td><a HREF="" target="new">Summary of Accounts</a></td>
+<td><a HREF="" target="new">Estatement</a></td>
+<td><input type="submit" value="edit"></td>
+<td><input type="submit" value="save"></td>
+</tr>
+</table>
+</body>
+</html>
