--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ function func_readonly(idval,onoff)
 <td><input type="text" name='txtbox' readOnly=true value="rptau4793" /></td> 
 <td><a HREF="" target="new">Summary of Accounts</a></td> 
 <td><a HREF="" target="new">Estatement</a></td> 
-<td><input type="submit" value="edit" onClick=func_readonly('txtbox',false);></td> 
+<td><input type="submit" value="edit" onClick=func_readonly('txtbox',true);></td> 
 <td><input type="submit" value="save" onClick=func_readonly('txtbox',true);></td> 
 </tr> 
 </table> 
