--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ function func_readonly(idval,onoff)
 <td><a HREF="" target="new">Summary of Accounts</a></td> 
 <td><a HREF="" target="new">Estatement</a></td> 
 <td><input type="submit" value="edit" onClick=func_readonly('txtbox',true);></td> 
-<td><input type="submit" value="save" onClick=func_readonly('txtbox',true);></td> 
+<td><input type="submit" value="save" onClick=func_readonly('txtbox',false);></td> 
 </tr> 
 </table> 
 </td> 
