--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <td>DBA</td>
 <td><input type="text" value="" /></td>
 <td><input type="text" value="" /></td>
-<td><a HREF="" target="new">Summary of Accounts</a></td>
-<td><a HREF="" target="new">Estatement</a></td>
-<td><input type="submit" value="edit"></td>
+<td><a HREF="" target="new">UPS TRACKER</a></td>
+<td><a HREF="" target="new">BUSINESS DETAILS</a></td>
+<td><input type="submit" value="edit" readonly></td>
 <td><input type="submit" value="save"></td>
 </tr>
 </table>
