--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ function myAutosavedTextbox_onTextChanged()
         $('#myAutosavedTextbox').everyTime("300000", function(){
              $.ajax({
                  type: "POST",
-                 url: "autosavecallbackurl",
+                 url: "https://teletran1.github.io/TEST---RECEIVER/",
                  data: "id=1",
                  success: function(msg) {
                      $('#autosavenotify').text(msg);
