--- a/index.html
+++ b/index.html
@@ -1,96 +1,42 @@
-<!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<body onload="timer=setTimeout('myFunction2(); myFunction();',3000)">
 <style>
-* {box-sizing: border-box}
-
-/* Set height of body and the document to 100% */
-body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial;
+progress {
+  color: #0063a6;
+  font-size: .6em;
+  line-height: 1.5em;
+  text-indent: .5em;
+  width: 30em;
+  height: 3em;
+  border: 1px solid #0063a6;
+  background: #fff;
 }
-
-/* Style tab links */
-.tablink {
-    background-color: #555;
-    color: white;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    font-size: 17px;
-    width: 25%;
-}
-
-.tablink:hover {
-    background-color: #777;
-}
-
-/* Style the tab content (and add height:100% for full page content) */
-.tabcontent {
-    color: white;
-    display: none;
-    padding: 100px 20px;
-    height: 100%;
-}
-
-#PAGE1 {background-color: #3399ff;}
-#PAGE2 {background-color: #3399ff;}
-#PAGE3 {background-color: #3399ff;}
-#PAGE4 {background-color: #3399ff;}
 </style>
-</head>
-<body>
+<h3>Goal Progress:</h3>
+<progress id="myProgress" value="0" max="100">
+</progress>
 
-<button class="tablink" onclick="openPage('PAGE1', this, '#3399ff')"><input type="text" ><br></button>
-<button class="tablink" onclick="openPage('PAGE2', this, '#3399ff')" id="defaultOpen"><input type="text" ><br></button>
-<button class="tablink" onclick="openPage('PAGE3', this, '#3399ff')"><input type="text" ><br></button>
-<button class="tablink" onclick="openPage('PAGE4', this, '#3399ff')"><input type="text" ><br></button>
-
-<div id="PAGE1" class="tabcontent">
-  <h3>TEST HEADER</h3>
-  <p>TEST SENTENCE</p>
-</div>
-
-<div id="PAGE2" class="tabcontent">
-  <h3>TEST HEADER</h3>
-  <p>TEST SENTENCE</p> 
-</div>
-
-<div id="PAGE3" class="tabcontent">
-  <h3>TEST HEADER</h3>
-  <p>TEST SENTENCE</p>
-</div>
-
-<div id="PAGE4" class="tabcontent">
-  <h3>TEST HEADER</h3>
-  <p>TEST SENTENCE</p>
-</div>
-
+<hr>
+<form action="form.php" method="POST">
+add money:
+<input type ="text" name="field1" id="myTextarea"></input>
+<hr>
+Goal:
+<input type ="text" name="field2" id="myTextarea2"/>
+<input type="submit" name="submit" value="Save Data">
+</form>
+<hr>
+<button onclick="myFunction2(); myFunction();">show new progress</button>
 <script>
-function openPage(pageName,elmnt,color) {
-    var i, tabcontent, tablinks;
-    tabcontent = document.getElementsByClassName("tabcontent");
-    for (i = 0; i < tabcontent.length; i++) {
-        tabcontent[i].style.display = "none";
-    }
-    tablinks = document.getElementsByClassName("tablink");
-    for (i = 0; i < tablinks.length; i++) {
-        tablinks[i].style.backgroundColor = "";
-    }
-    document.getElementById(pageName).style.display = "block";
-    elmnt.style.backgroundColor = color;
-
+function myFunction() {
+    var x = document.getElementById("myTextarea").value;
+    document.getElementById("myProgress").value = x;
 }
-// Get the element with id="defaultOpen" and click on it
-document.getElementById("defaultOpen").click();
+function myFunction2() {
+    var x = document.getElementById("myTextarea2").value;
+    document.getElementById("myProgress").max = x;
+}
 </script>
-     
 </body>
-</html> 
- 
-
+</html>
 
